httpd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd
spec:
  to:
    kind: Service
    name: httpd
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: http
